--- a/package.json
+++ b/package.json
@@ -3,15 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "css-loader": "^2.0.0",
     "jquery": "^3.3.1",
     "material-design-lite": "^1.3.0",
     "muicss": "^0.9.41",
+    "postcss-loader": "^3.0.0",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
     "react-icons": "^3.2.2",
     "react-responsive": "^6.0.1",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "2.1.1",
+    "react-scripts": "^2.1.1",
     "react-slick": "^0.23.2",
     "slick-carousel": "^1.8.1"
   },
