--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-dom": "^16.6.3",
     "react-icons": "^3.2.2",
     "react-responsive": "^6.0.1",
+    "react-reveal": "^1.2.2",
     "react-router-dom": "^4.3.1",
     "react-scripts": "^2.1.1",
     "react-slick": "^0.23.2",
